workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:07:06 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:07:16 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
make: Nothing to be done for 'all'.
13:09:07 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:32:7: error: ‘BaseClass’ is an inaccessible base of ‘ChildClass’
  a = &b;
       ^
src/subdir.mk:18: recipe for target 'src/main.o' failed
make: *** [src/main.o] Error 1
13:09:50 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:32:7: error: ‘BaseClass’ is an inaccessible base of ‘ChildClass’
  a = &b;
       ^
make: *** [src/main.o] Error 1
src/subdir.mk:18: recipe for target 'src/main.o' failed
13:10:23 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:10:48 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:29:13: warning: variable ‘a’ set but not used [-Wunused-but-set-variable]
  BaseClass *a;
             ^
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:11:38 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:29:13: warning: variable ‘a’ set but not used [-Wunused-but-set-variable]
  BaseClass *a;
             ^
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:11:48 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:29:13: warning: variable ‘a’ set but not used [-Wunused-but-set-variable]
  BaseClass *a;
             ^
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:12:01 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:12:26 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:12:45 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:28:13: error: cannot declare variable ‘b’ to be of abstract type ‘ChildClass’
  ChildClass b;
             ^
../src/main.cpp:17:7: note:   because the following virtual functions are pure within ‘ChildClass’:
 class ChildClass: public BaseClass {
       ^~~~~~~~~~
../src/main.cpp:14:15: note: 	virtual void BaseClass::display()
  virtual void display () = 0;
               ^~~~~~~
src/subdir.mk:18: recipe for target 'src/main.o' failed
make: *** [src/main.o] Error 1
13:12:55 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:15:06 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
13:17:30 **** Incremental Build of configuration Debug for project excercise9-9 ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: excercise9-9
Invoking: GCC C++ Linker
g++  -o "excercise9-9"  ./src/main.o   
Finished building target: excercise9-9
 
